tests/unit-fail-compilation/j052a.ref
j052a.c:2:7: error: The left operand in a bitwise left-shift is negative.
  Undefined behavior (UB-CEB4). See C11 sec. 6.5.7:4, J.2:1 item 52
Translation failed (config dumped). Run kcc -d j052a.c to see commands run.
