tests/unit-fail-compilation/j052a.c
int main(void) {
      -1 << 5;
      return 0;
}

